fix tooltip on mobile and form validation in general

--- a/css/styles.css
+++ b/css/styles.css
@@ -327,9 +327,16 @@ form .input-container textarea {
   width: 100%;
 }
 label {
+  
   color: grey;
   margin-bottom: 10px;
   font-size: 1.2em;
+}
+.validation-text {
+  margin-bottom: 10px;
+  font-size: .8em;
+  font-weight: 400;
+  color: red;
 }
 
 input,
@@ -339,6 +346,13 @@ textarea {
   border: 1px solid lightgrey;
   border-radius: 5px;
   line-height: 1.5;
+}
+input:focus,
+textarea:focus{
+  outline: none;
+}
+.invalid {
+  border: 1px solid rgb(220, 0, 0);
 }
 .container-input-submit {
   display: flex;
@@ -588,11 +602,13 @@ footer {
     flex-direction: column;
   }
 
+  /* Less than 16px will cause zoom on mobile */
   input,
   select:focus,
   textarea {
     font-size: 16px;
   }
+
   .input-submit {
     background-color: #444;
     color: white;
@@ -679,3 +695,4 @@ footer {
 .burger-menu .menu-bar-2 {
   margin: 7px 0;
 }
+
